--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
   </head>
   <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Menu
+        </button>
+        <div class="dropdown-content">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+        </div>
+      </div>
+    </div>
     <div id="main-content">
       <h1 class="title">Vintage Sports Card Collectors</h1>
     </div>
