added about page

--- a/about.html
+++ b/about.html
@@ -4,22 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Page</title>
+    <title>About Us - Vintage Sports Card Collectors</title>
     <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
   </head>
   <body>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
       <div class="dropdown">
-        <button class="dropbtn">
-         Menu
-        </button>
+        <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
         </div>
       </div>
+    </div>
+    <div id="main-content">
+      <h1>About Vintage Sports Card Collectors</h1>
+      <p>
+        Welcome to Vintage Sports Card Collectors, your ultimate destination for
+        rare and valuable sports cards. Our passion for collecting and
+        preserving sports memorabilia drives us to provide a premium collection
+        of cards from legendary athletes across various sports.
+      </p>
+
+      <h2>Our Mission</h2>
+      <p>
+        Our mission is to connect collectors with the finest vintage sports
+        cards, offering a vast selection that appeals to both new and seasoned
+        collectors. We aim to foster a community where enthusiasts can share
+        their love for sports history and the art of card collecting.
+      </p>
+
+      <h2>About the Founder</h2>
+      <p>
+        Hi, I'm Daniel Rodriguez, the founder of Vintage Sports Card Collectors.
+        My journey into the world of sports cards began in my childhood, and it
+        has been a lifelong passion ever since. Through this website, I hope to
+        share my enthusiasm and knowledge with fellow collectors.
+      </p>
+
+      <h2>Our Collection</h2>
+      <p>
+        We take pride in offering a diverse range of cards from baseball,
+        basketball, football, and all other sports. Each card is carefully
+        selected for its authenticity, condition, and historical significance.
+        Whether you are looking for a rare rookie card or a classic piece of
+        sports history, you'll find it here.
+      </p>
+
+      <h2>Connect with Us</h2>
+      <p>
+        Join our community and stay updated with our latest additions and
+        exclusive offers. Follow us on social media for the latest news and
+        special promotions:
+      </p>
+      <ul>
+        <li>
+          Twitter:
+          <a href="https://twitter.com/vintagesportscards"
+            >@vintagesportscards</a
+          >
+        </li>
+        <li>
+          Facebook:
+          <a href="https://www.facebook.com/vintagesportscardcollectors"
+            >Vintage Sports Card Collectors</a
+          >
+        </li>
+        <li>
+          Instagram:
+          <a href="https://www.instagram.com/vintagesportscardcollectors"
+            >@vintagesportscardcollectors</a
+          >
+        </li>
+      </ul>
+
+      <h2>Contact Us</h2>
+      <p>
+        Have questions or want to inquire about a specific card? Contact us at
+        <a href="Fakeinfo@vintagesportscardcollectors.com"
+          >Fakeinfo@vintagesportscardcollectors.com</a
+        >.
+      </p>
     </div>
   </body>
 </html>
