updated my project to meet some requirements for grade

--- a/RodriguezDanielAbout.html
+++ b/RodriguezDanielAbout.html
@@ -2,19 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Explore vintage sports cards from baseball, basketball, and football at Vintage Sports Card Collectors"
+    />
+    <meta
+      name="keywords"
+      content="vintage sports cards, baseball cards, basketball cards, football cards, collectibles"
+    />
+    <meta name="author" content="Daniel Rodriguez" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Vintage Sports Card Collectors</title>
+    <title>Vintage Sports Card Collectors</title>
+    <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
     <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
   </head>
   <body>
     <div class="navbar">
-      <a href="index.html">Home</a>
+      <a href="DanielRodriguezHome.html">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
+          <a href="DanielRodriguezHome.html">Home</a>
+          <a href="RodriguezDanielAbout.html">About</a>
         </div>
       </div>
     </div>
@@ -62,7 +71,7 @@
         <li>
           Twitter:
           <a href="https://twitter.com/vintagesportscards"
-            >@vintagesportscards</a
+            >vintagesportscards</a
           >
         </li>
         <li>
@@ -74,7 +83,7 @@
         <li>
           Instagram:
           <a href="https://www.instagram.com/vintagesportscardcollectors"
-            >@vintagesportscardcollectors</a
+            >vintagesportscardcollectors</a
           >
         </li>
       </ul>
