Added video and message to home page, as well as a form with a post

--- a/RodriguezDanielAbout.html
+++ b/RodriguezDanielAbout.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta
       name="description"
       content="Explore vintage sports cards from baseball, basketball, and football at Vintage Sports Card Collectors"
-    />
+    >
     <meta
       name="keywords"
       content="vintage sports cards, baseball cards, basketball cards, football cards, collectibles"
-    />
-    <meta name="author" content="Daniel Rodriguez" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    >
+    <meta name="author" content="Daniel Rodriguez" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Vintage Sports Card Collectors</title>
-    <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
-    <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css" />
+   <link rel="stylesheet" type="text/css" href="rodriguezDanielStyles.css">
+
   </head>
   <body>
     <div class="navbar">
@@ -24,10 +24,12 @@
         <div class="dropdown-content">
           <a href="DanielRodriguezHome.html">Home</a>
           <a href="RodriguezDanielAbout.html">About</a>
+	  <a href="table.html">Table</a>
+	  <a href="form.html">Form</a>
         </div>
       </div>
     </div>
-    <div id="main-content">
+   
       <h1>About Vintage Sports Card Collectors</h1>
       <p>
         Welcome to Vintage Sports Card Collectors, your ultimate destination for
@@ -95,6 +97,6 @@
           >Fakeinfo@vintagesportscardcollectors.com</a
         >.
       </p>
-    </div>
+    
   </body>
 </html>
